# codrive

./: build.sh  meson.build
include/: drive_type.h  memory_type.h
src/cmdio/: cmd_pkt.h  cmdio.h  mem_obj.cpp  mem_obj.h
src/cmdio/emu/: .ModelCmdio.h.swp  .ModelInterface.cpp.swp  .ModelInterface.h.swp  .ProcessVM.cpp.swp  .ProcessVM.h.swp  ModelCmdio.cpp  ModelCmdio.h  ModelInterface.cpp  ModelInterface.h  ProcessVM.cpp  ProcessVM.h  cmdio_interface.c  linear_allocator.h  model_interface.c
src/cmdio/gem5/: gem5cpu_cmdio.cpp  gem5cpu_cmdio.h
src/cmdio/linux/: Makefile  opu.h  opu_bo.c  opu_bo.h  opu_chardev.c  opu_chip.c  opu_chip.h  opu_core.c  opu_core.h  opu_core_asic_v1.c  opu_core_asic_v1.h  opu_crat.c  opu_crat.h  opu_dbgdev.c  opu_dbgdev.h  opu_dbgmgr.c  opu_dbgmgr.h  opu_deps.c  opu_deps.h  opu_device.c  opu_device_queue_manager.c  opu_device_queue_manager.h  opu_doorbell.c  opu_drv.c  opu_events.c  opu_events.h  opu_fence.c  opu_flat_memory.c  opu_interrupt.c  opu_iommu.c  opu_iommu.h  opu_ip_mc.c  opu_ip_mc.h  opu_irq.c  opu_irq.h  opu_kms.c  opu_migrate.c  opu_migrate.h  opu_mo_mgr.c  opu_mo_mgr.h  (+13 more)
src/cmdio/linux/include/: opu_ioctl.h
src/cmdio/smi/: device_factory.h
src/common/: .options.cpp.swp  lazy_ptr.h  options.cpp  options.h
src/common/utils/: CMakeLists.txt  log.cpp  log.h  util.cpp  util.h
src/common/utils/lang/: assert.h  cmdline.cpp  cmdline.h  common.h  debug.cpp  debug.h  error.cpp  error.h  lang.cpp  lang.h  string.cpp  string.h  terminal.cpp  terminal.h  thread_group.h  timer.cpp  timer.h  types.h
src/common/utils/pattern/: Command.h  ObjectPool.h  Singleton.h  any.h
src/common/utils/pattern/test/: CMakeLists.txt  utils_pattern_test.cpp
src/common/utils/sys/: DynamicLibrary.cpp  DynamicLibrary.h
src/device/: CMakeLists.txt  Debug.cpp  Device.cpp  MemMgr.cpp  MemObj.cpp  QueueMgr.cpp  Topology.cpp  Vma.cpp  memory_manager.cpp
src/device/api/: debug.cpp  topology.cpp
src/device/attic/: command_queue.cpp  command_queue.h  device_tools.cpp  kmd_ioctl.h  libhsakmt.h  memory.h
src/device/inc/: Device.h  DeviceInfo.h  GpuMemory.h  MemObj.h  QueueMgr.h  Topology.h  Vma.h  debug.h  memory_manager.h
src/drive/: Agent.cpp  MemoryRegion.cpp  Platform.cpp  Runtime.cpp  blit_cpdma.cpp  drive_api.cc  loader_api.cc
src/drive/attic/: image_ext_api.cpp  pps_ext_finalize.h  pps_kernel_code.h
src/drive/core/: IMemoryRegion.h  blit.h
src/drive/core/attic/: Agent.h  Runtime.h
src/drive/inc/: .Runtime.h.swo  Agent.h  MemRegionMgr.h  MemoryRegion.h  Platform.h  ProgramLoader.h  Runtime.h  blit_cpdma.h  cache.h  drive_api.h  loader_api.h
src/drive/loader/: .hsa_helpers.hpp.swp  CodeObject.cpp  CodeObjectReader.cpp  CodeObjectReader.h  CodeObjectUtil.h  ElfImage.cpp  Executable.cpp  Executable.h  Loader.h  LoaderContext.cpp  LoaderContext.h  OfflineLoaderContext.cpp  OfflineLoaderContext.h  code_object_bundle.hpp  hsa_helpers.hpp  kernel_code.h  program_state.hpp
src/drive/loader/attic/: CodeObjectUtil.h  codeobject_util.cpp  locks.cpp  locks.h
src/drive/platform/: CMakeLists.txt  blit_cpdma.cpp  cpu_agent.cpp  isa.cpp  pps.cpp  pps_ext.cpp  topology.cpp
src/drive/platform/inc/: .cpu_agent.h.swp  .pps_queue.h.swp  agent.h  blit.h  cache.h  cpu_agent.h  exceptions.h  isa.h  pps.h  pps_blit_cpdma.h  pps_common.h  pps_ext.h  pps_ext_api_trace.h  pps_ext_image.h  pps_internal.h  pps_queue.h  pps_signal.h  topology.h
src/drive/platform/util/: utils.h
src/driver/: CMakeLists.txt  csq.cpp  csq_accelerator.cpp  csq_cmd.cpp  csq_context.cpp  csq_device.cpp  csq_pointer.cpp  csq_queue.cpp  unpinned_copy_engine.cpp
src/driver/inc/: csq.h  csq_accelerator.h  csq_cmd.h  csq_context.h  csq_defines.h  csq_device.h  csq_pointer.h  csq_queue.h  grid_launch.h  kalmar_aligned_alloc.h  kalmar_index.h  unpinned_copy_engine.h
src/hip/src/: hip_module.cpp
